完善k-mall的商品模块

--- a/k-mall/演示html/pay.html
+++ b/k-mall/演示html/pay.html
@@ -2,13 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>商城登录界面</title>
+    <title>支付界面</title>
+    <style>
+        table th td {
+            margin-right: 10px;
+        }
+    </style>
 </head>
 <body>
-<h3>商城登录界面</h3>
-    用户名：<input type="text" name="username" required value="admin"/>
-    密 码：<input type="text" name="password" required value="admin"/>
-    <button type="submit" id="loginRequest">登录</button>
+<p>欢迎 <span id="userId"></span></p>
+<h3>待支付商品列表</h3>
+<table id="tableId" style="text-align: left;">
+    <tr>
+        <th>订单编号</th>
+        <th>商品ID</th>
+        <th>商品名称</th>
+        <th>商品价格</th>
+        <th>商品库存</th>
+        <th>商品备注</th>
+        <th>创建时间</th>
+        <th>操作</th>
+    </tr>
+</table>
 <div style="margin-top: 150px">
     <a href="login.html">登录界面</a>、<a href="product.html">商品展示界面</a>、
     <a href="product.html">订单界面界面</a>、<a href="product.html">支付界面</a>
@@ -16,21 +31,82 @@
 </body>
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
 <script>
-    $('#loginRequest').click(function () {
-        var username = $('input[name=username]').val();
-        var password = $('input[name=password]').val();
-        if (username === '' || password === '') {
-            return;
+    $(function () {
+        var token = JSON.parse(localStorage.getItem("k-mall-token"))
+        console.error(token)
+        var accessToken = ""
+        if (!token) {
+            $("#userId").html("游客，请先<a href=\"login.html\">登录</a>")
+        } else {
+            var username = token.username
+            $("#userId").html(username + "，<a onclick='logout()' href='#'>登出</a>")
+            accessToken = token.token
+            console.error("访问token为:" + accessToken)
         }
-        $.post("http://localhost:8000/user-service/login", {username: username, password: password}, function (result) {
+
+        $.post("http://localhost:8000/pay-service/list?token=" + accessToken, {token: accessToken}, function (result) {
             console.error(result)
             if (result.code === 200) {
-                localStorage.setItem("k-mall-token", JSON.stringify(result))
-                window.location.href = "product.html"
-            } else {
-                alert(result.msg || "登录失败" + result)
+                var data = result.data
+                data.map(e => {
+                    var htmlText = "<tr>"
+                    htmlText += "<td>" + e.pid + "</td>"
+                    htmlText += "<td>" + e.name + "</td>"
+                    htmlText += "<td>" + e.price + "</td>"
+                    htmlText += "<td>" + e.stock + "</td>"
+                    htmlText += "<td>" + e.remark + "</td>"
+                    htmlText += "<td>" + e.createTime + "</td>"
+                    htmlText += "<td><a onclick=preBuy('http://localhost:8000/product-service/preBuy?pid={0}&token={1}') href='#'>预下单</a></td>".format(e.pid, accessToken)
+                    htmlText += "</tr>"
+                    $("#tableId").append(htmlText)
+                })
+                // let htmlText = data.uid + data.name + data.price + data.stock + data.createTime + remark
             }
         }, "json")
-    });
+    })
+
+    function preBuy(url) {
+        var token = JSON.parse(localStorage.getItem("k-mall-token"))
+        $.post(url, {uid: token.uid}, function (result) {
+            if (result.code === 200) {
+                alert("下单成功，请在2分钟内完成支付，否则订单将会失效")
+                window.location.href = "pay.html"
+            } else {
+                alert(result.msg)
+            }
+        }, "json")
+    }
+
+    function logout() {
+        localStorage.removeItem("k-mall-token")
+        window.location.href = "login.html"
+    }
+
+    /**
+     * var str='这是一个测试的字符串：{0} {1}'.format('Hello','world');
+     * var str='这是一个测试的字符串：{str0} {str1}'.format({str0:'Hello',str1:'world'});
+     */
+    String.prototype.format = function(args) {
+        var result = this;
+        if (arguments.length > 0) {
+            if (arguments.length == 1 && typeof (args) == "object") {
+                for (var key in args) {
+                    if(args[key]!=undefined){
+                        var reg = new RegExp("({" + key + "})", "g");
+                        result = result.replace(reg, args[key]);
+                    }
+                }
+            }
+            else {
+                for (var i = 0; i < arguments.length; i++) {
+                    if (arguments[i] != undefined) {
+                        var reg= new RegExp("({)" + i + "(})", "g");
+                        result = result.replace(reg, arguments[i]);
+                    }
+                }
+            }
+        }
+        return result;
+    }
 </script>
 </html>
