完善k-mall的商品模块

--- a/k-mall/演示html/login.html
+++ b/k-mall/演示html/login.html
@@ -11,7 +11,7 @@
     <button type="submit" id="loginRequest">登录</button>
 <div style="margin-top: 150px">
     <a href="login.html">登录界面</a>、<a href="product.html">商品展示界面</a>、
-    <a href="product.html">订单界面界面</a>、<a href="product.html">支付界面</a>
+    <a href="pay.html">订单界面界面</a>、<a href="pay.html">支付界面</a>
 </div>
 </body>
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
