--- a/k-mall/演示html/pay.html
+++ b/k-mall/演示html/pay.html
@@ -26,6 +26,7 @@
         <th>应付款</th>
         <th>备注</th>
         <th>创建时间</th>
+        <th>失效时间</th>
         <th>操作</th>
     </tr>
 </table>
@@ -67,7 +68,7 @@
         $.post("http://localhost:8000/order-service/toPaidOrder?token=" + accessToken, {token: accessToken, uid: token.uid}, function (result) {
             if (result.code === 200) {
                 var data = result.data
-                data.map(e => {
+                data.map((e, i) => {
                     var htmlText = "<tr>"
                     htmlText += "<td>" + e.oid + "</td>"
                     htmlText += "<td>" + e.uid + "</td>"
@@ -76,6 +77,7 @@
                     htmlText += "<td>" + e.price + "</td>"
                     htmlText += "<td>" + e.remark + "</td>"
                     htmlText += "<td>" + e.createTime + "</td>"
+                    htmlText += "<td>" + e.expireTime + "</td>"
                     htmlText += "<td><a onclick=pay('http://localhost:8000/order-service/completeOrder?oid={0}&token={1}','{2}') href='#'>支付</a></td>".format(e.oid, accessToken, e.price)
                     htmlText += "</tr>"
                     $("#tableId").append(htmlText)
@@ -96,7 +98,7 @@
                     htmlText += "<td>" + e.price + "</td>"
                     htmlText += "<td>" + e.remark + "</td>"
                     htmlText += "<td>" + e.createTime + "</td>"
-                    htmlText += "<td>" + e.updateTime + "</td>"
+                    htmlText += "<td>" + e.completeTime + "</td>"
                     htmlText += "<td><a onclick=del('http://localhost:8000/order-service/deleteOrder?oid={0}&token={1}') href='#'>删除</a></td>".format(e.oid, accessToken)
                     htmlText += "</tr>"
                     $("#tableId1").append(htmlText)
